exports[`invalid(1): {\"peerDependencies\": {\"foo\": \"^1.0.0\"}} 1`] = `

[Input]
  1 | {"peerDependencies": {"foo": "^1.0.0"}}

`;

exports[`invalid(1): {\"peerDependencies\": {\"foo\": \"^1.0.0\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"foo": "^1.0.0"}}
    |                       ^^^^^ Peer dependency \`foo\` should also be listed in \`devDependencies\`.

Suggestion 1/1: Add \`foo\` to \`devDependencies\` at \`^1.0.0\`.:
  1 | {"peerDependencies": {"foo": "^1.0.0"},
  2 | 	"devDependencies": {
  3 | 		"foo": "^1.0.0"
  4 | 	}}

`;

exports[`invalid(10): {\"peerDependencies\": {\"foo\": \"^1.0.0\"}, \"peerDependenciesMeta\": {\"foo\": {\"optional\": false}}} 1`] = `

[Input]
  1 | {"peerDependencies": {"foo": "^1.0.0"}, "peerDependenciesMeta": {"foo": {"optional": false}}}

`;

exports[`invalid(10): {\"peerDependencies\": {\"foo\": \"^1.0.0\"}, \"peerDependenciesMeta\": {\"foo\": {\"optional\": false}}} 2`] = `

Message:
> 1 | {"peerDependencies": {"foo": "^1.0.0"}, "peerDependenciesMeta": {"foo": {"optional": false}}}
    |                       ^^^^^ Peer dependency \`foo\` should also be listed in \`devDependencies\`.

Suggestion 1/1: Add \`foo\` to \`devDependencies\` at \`^1.0.0\`.:
  1 | {"peerDependencies": {"foo": "^1.0.0"}, "peerDependenciesMeta": {"foo": {"optional": false}},
  2 | 	"devDependencies": {
  3 | 		"foo": "^1.0.0"
  4 | 	}}

`;

exports[`invalid(11): {\"peerDependencies\": {\"react\": \"^18.0.0\"}, \"peerDependenciesMeta\": {\"react\": {\"optional\": true}}, \"devDependencies\": {\"react\": \"^17.0.0\"}} 1`] = `

[Input]
  1 | {"peerDependencies": {"react": "^18.0.0"}, "peerDependenciesMeta": {"react": {"optional": true}}, "devDependencies": {"react": "^17.0.0"}}

`;

exports[`invalid(11): {\"peerDependencies\": {\"react\": \"^18.0.0\"}, \"peerDependenciesMeta\": {\"react\": {\"optional\": true}}, \"devDependencies\": {\"react\": \"^17.0.0\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"react": "^18.0.0"}, "peerDependenciesMeta": {"react": {"optional": true}}, "devDependencies": {"react": "^17.0.0"}}
    |                                                                                                                                ^^^^^^^^^ The \`devDependencies\` version of \`react\` (\`^17.0.0\`) does not satisfy the \`peerDependencies\` range (\`^18.0.0\`).

Suggestion 1/1: Set the \`devDependencies\` range to \`^18.0.0\`.:
  1 | {"peerDependencies": {"react": "^18.0.0"}, "peerDependenciesMeta": {"react": {"optional": true}}, "devDependencies": {"react": "^18.0.0"}}

`;

exports[`invalid(2): {\"peerDependencies\": {\"foo\": \"^1.0.0\"}, \"devDependencies\": {\"bar\": \"^2.0.0\"}} 1`] = `

[Input]
  1 | {"peerDependencies": {"foo": "^1.0.0"}, "devDependencies": {"bar": "^2.0.0"}}

`;

exports[`invalid(2): {\"peerDependencies\": {\"foo\": \"^1.0.0\"}, \"devDependencies\": {\"bar\": \"^2.0.0\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"foo": "^1.0.0"}, "devDependencies": {"bar": "^2.0.0"}}
    |                       ^^^^^ Peer dependency \`foo\` should also be listed in \`devDependencies\`.

Suggestion 1/1: Add \`foo\` to \`devDependencies\` at \`^1.0.0\`.:
  1 | {"peerDependencies": {"foo": "^1.0.0"}, "devDependencies": {"bar": "^2.0.0", "foo": "^1.0.0"}}

`;

exports[`invalid(3): {\"peerDependencies\": {\"foo\": \"^1.0.0\", \"bar\": \"^2.0.0\"}} 1`] = `

[Input]
  1 | {"peerDependencies": {"foo": "^1.0.0", "bar": "^2.0.0"}}

`;

exports[`invalid(3): {\"peerDependencies\": {\"foo\": \"^1.0.0\", \"bar\": \"^2.0.0\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"foo": "^1.0.0", "bar": "^2.0.0"}}
    |                       ^^^^^ Peer dependency \`foo\` should also be listed in \`devDependencies\`.

Suggestion 1/1: Add \`foo\` to \`devDependencies\` at \`^1.0.0\`.:
  1 | {"peerDependencies": {"foo": "^1.0.0", "bar": "^2.0.0"},
  2 | 	"devDependencies": {
  3 | 		"foo": "^1.0.0"
  4 | 	}}

`;

exports[`invalid(3): {\"peerDependencies\": {\"foo\": \"^1.0.0\", \"bar\": \"^2.0.0\"}} 3`] = `

Message:
> 1 | {"peerDependencies": {"foo": "^1.0.0", "bar": "^2.0.0"}}
    |                                        ^^^^^ Peer dependency \`bar\` should also be listed in \`devDependencies\`.

Suggestion 1/1: Add \`bar\` to \`devDependencies\` at \`^2.0.0\`.:
  1 | {"peerDependencies": {"foo": "^1.0.0", "bar": "^2.0.0"},
  2 | 	"devDependencies": {
  3 | 		"bar": "^2.0.0"
  4 | 	}}

`;

exports[`invalid(4): {\"peerDependencies\": {\"foo\": \"^1.0.0\", \"bar\": \"^2.0.0\"}, \"devDependencies\": {\"foo\": \"^1.0.0\"}} 1`] = `

[Input]
  1 | {"peerDependencies": {"foo": "^1.0.0", "bar": "^2.0.0"}, "devDependencies": {"foo": "^1.0.0"}}

`;

exports[`invalid(4): {\"peerDependencies\": {\"foo\": \"^1.0.0\", \"bar\": \"^2.0.0\"}, \"devDependencies\": {\"foo\": \"^1.0.0\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"foo": "^1.0.0", "bar": "^2.0.0"}, "devDependencies": {"foo": "^1.0.0"}}
    |                                        ^^^^^ Peer dependency \`bar\` should also be listed in \`devDependencies\`.

Suggestion 1/1: Add \`bar\` to \`devDependencies\` at \`^2.0.0\`.:
  1 | {"peerDependencies": {"foo": "^1.0.0", "bar": "^2.0.0"}, "devDependencies": {"foo": "^1.0.0", "bar": "^2.0.0"}}

`;

exports[`invalid(5): {\"peerDependencies\": {\"react\": \"^18.0.0\"}} 1`] = `

[Input]
  1 | {"peerDependencies": {"react": "^18.0.0"}}

`;

exports[`invalid(5): {\"peerDependencies\": {\"react\": \"^18.0.0\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"react": "^18.0.0"}}
    |                       ^^^^^^^ Peer dependency \`react\` should also be listed in \`devDependencies\`.

Suggestion 1/1: Add \`react\` to \`devDependencies\` at \`^18.0.0\`.:
  1 | {"peerDependencies": {"react": "^18.0.0"},
  2 | 	"devDependencies": {
  3 | 		"react": "^18.0.0"
  4 | 	}}

`;

exports[`invalid(6): {\"peerDependencies\": {\"foo\": \"^1.0.0\"}, \"devDependencies\": {}} 1`] = `

[Input]
  1 | {"peerDependencies": {"foo": "^1.0.0"}, "devDependencies": {}}

`;

exports[`invalid(6): {\"peerDependencies\": {\"foo\": \"^1.0.0\"}, \"devDependencies\": {}} 2`] = `

Message:
> 1 | {"peerDependencies": {"foo": "^1.0.0"}, "devDependencies": {}}
    |                       ^^^^^ Peer dependency \`foo\` should also be listed in \`devDependencies\`.

Suggestion 1/1: Add \`foo\` to \`devDependencies\` at \`^1.0.0\`.:
  1 | {"peerDependencies": {"foo": "^1.0.0"}, "devDependencies": {
  2 | 	"foo": "^1.0.0"
  3 | }}

`;

exports[`invalid(7): {\n\t\"peerDependencies\": {\n\t\t\"foo\": \"^1.0.0\"\n\t},\n\t\"devDependencies\": {\n\t\t\"bar\": \"^2.0.0\"\n\t}\n} 1`] = `

[Input]
  1 | {
  2 | 	"peerDependencies": {
  3 | 		"foo": "^1.0.0"
  4 | 	},
  5 | 	"devDependencies": {
  6 | 		"bar": "^2.0.0"
  7 | 	}
  8 | }

`;

exports[`invalid(7): {\n\t\"peerDependencies\": {\n\t\t\"foo\": \"^1.0.0\"\n\t},\n\t\"devDependencies\": {\n\t\t\"bar\": \"^2.0.0\"\n\t}\n} 2`] = `

Message:
  1 | {
  2 | 	"peerDependencies": {
> 3 | 		"foo": "^1.0.0"
    | 		^^^^^ Peer dependency \`foo\` should also be listed in \`devDependencies\`.
  4 | 	},
  5 | 	"devDependencies": {
  6 | 		"bar": "^2.0.0"
  7 | 	}
  8 | }

Suggestion 1/1: Add \`foo\` to \`devDependencies\` at \`^1.0.0\`.:
  1 | {
  2 | 	"peerDependencies": {
  3 | 		"foo": "^1.0.0"
  4 | 	},
  5 | 	"devDependencies": {
  6 | 		"bar": "^2.0.0",
  7 | 		"foo": "^1.0.0"
  8 | 	}
  9 | }

`;

exports[`invalid(8): {\"peerDependencies\": {\"react\": \"^18.0.0\"}, \"devDependencies\": {\"react\": \"^17.0.0\"}} 1`] = `

[Input]
  1 | {"peerDependencies": {"react": "^18.0.0"}, "devDependencies": {"react": "^17.0.0"}}

`;

exports[`invalid(8): {\"peerDependencies\": {\"react\": \"^18.0.0\"}, \"devDependencies\": {\"react\": \"^17.0.0\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"react": "^18.0.0"}, "devDependencies": {"react": "^17.0.0"}}
    |                                                                         ^^^^^^^^^ The \`devDependencies\` version of \`react\` (\`^17.0.0\`) does not satisfy the \`peerDependencies\` range (\`^18.0.0\`).

Suggestion 1/1: Set the \`devDependencies\` range to \`^18.0.0\`.:
  1 | {"peerDependencies": {"react": "^18.0.0"}, "devDependencies": {"react": "^18.0.0"}}

`;

exports[`invalid(9): {\"peerDependencies\": {\"foo\": \"^1.0.0\"}, \"devDependencies\": \"invalid\"} 1`] = `

[Input]
  1 | {"peerDependencies": {"foo": "^1.0.0"}, "devDependencies": "invalid"}

`;

exports[`invalid(9): {\"peerDependencies\": {\"foo\": \"^1.0.0\"}, \"devDependencies\": \"invalid\"} 2`] = `

Message:
> 1 | {"peerDependencies": {"foo": "^1.0.0"}, "devDependencies": "invalid"}
    |                       ^^^^^ Peer dependency \`foo\` should also be listed in \`devDependencies\`.

`;
